<resources>
    <string name="app_name">SimpleTaskTodo</string>

    <!--  TodoList  -->
    <string name="send">Send</string>
    <string name="delete_done">Delete done</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="extend_list">Extend List</string>

    <!--  Menu  -->
    <string name="logout">Log out</string>

    <!--  Login and Sign-up  -->
    <string name="enter_your_account">Enter with your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="already_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="todo_deleted">To Do Deleted</string>
    <string name="undo">Undo</string>
    <string name="added">Added</string>
    <string name="updated">Updated</string>
    <string name="deleted">Deleted</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="confirm">Confirm</string>
    <string name="log_in">Log in</string>
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="forgot_pass_description">Enter your email address, we\'ll send you a email to reset your password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_without_login">Enter without log in</string>
    <string name="menu">Menu</string>
    <string name="more">More</string>
    <string name="todo_empty">Title can\'t be empty</string>
</resources>