<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown">

    <TextView
        android:id="@+id/text_view_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TITULO DA LISTA AQUI" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_fragment"
        app:layout_constraintTop_toBottomOf="@id/text_view_item_title"
        tools:listitem="@layout/todo_list" />

    <EditText
        android:id="@+id/editText_task_fragment"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_layout_light_brown"
        android:drawableStart="@drawable/icon_add"
        android:hint="@string/task"
        android:autofillHints="@string/task"
        android:inputType="text"
        android:maxHeight="45dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/light_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add_fragment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_layout_light_brown"
        android:text="@string/add"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_delete_fragment" />

    <Button
        android:id="@+id/button_delete_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_layout_light_brown"
        android:text="@string/delete"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>